# instal-stable

./: .envrc  .gitignore  .gitmodules  .lenvs  .readthedocs.yaml  INSTALLATION.md  Makefile  README.md  checklist.md  doot.toml  instalinspect.py  pyproject.toml  requirements.txt  setup.py  towncrier.toml  tox.toml
.github/workflows/: python-test.yml
.tasks/: instal_todos.org
docs/: cli.rst  concepts.rst  conf.py  examples.rst  index.rst  installation.rst  repo_structure.rst  system_structure.rst
examples/basic/: basic.ial
examples/forestry/: forgot-tools.iaq  new-workflow.iaq  old-workflow.iaq
examples/greeting/: greeting.ial
examples/interacting/: bridge.iab  bridge.lp  eu_privacy.ial  facebook.ial  us_surveillance.ial
examples/libraries/: case_intro.txt  coord-gantt.aux  coord-gantt.tex  coord-query.sh~  coord-remote-run.sh  coord-run.sh  coord-trace-s0-s5.tex  coord-trace-s0-s6.aux  coord-trace-s5-s10.tex  coord-trace-s6-s12.aux  coord-trace-s6-s12.tex  coord-trace.tex~  coord.aux  coord.json  coord.tex  interact-gannt.aux  interact-run.sh  interact-run.sh~  libB-run.sh  pubA-run.sh  pubA-run.sh~  pubA.aux  pubA.json  pubA.txt  tmp
examples/libraries/ASPFiles/: bridge.lp  ctr2.lp  libB.lp  libC_s.lp  pubA.lp  test.lp  tr2.lp
examples/libraries/InstALFiles/: bridge.txt  coord-events.iaq  domain.idc  libB-events.iaq  libB-libC-bridge.ial  libB-libC-bridge.txt  libB.ial~  libB.txt  libC-libB-bridge.ial~  libC-libB-bridge.txt  libC.ial~  libC.txt  library.txt  pubA-events.iaq  pubA.ial  pubA.txt
examples/libraries/TestTrace/: coord-events.iaq~  ctr3.lp  interact-events.iaq
examples/libraries/pyviz/: pyviz-chain.py  pyviz_run.sh
examples/libraries/reports/: coord-trace-s0-s6.tex  ctr1.tex  ctr2.tex  foo.tex  interact-gannt.tex  interact.tex
examples/libraries/traces/: interact.json  libB.json
examples/lord/: lord.ial
examples/merged/: bridge.iab  inst_i.ial  inst_j.ial  inst_k.ial  merged_jkl.ial  merged_ljk_bridge.ial
examples/v1a/basic/: basic-init.iaf  basic.ial
examples/v1a/basicbridge/: a.ial  c.ial
examples/v1a/branching/: branching.ial
examples/v1a/bridge_basic/: a.ial  b.iab  c.ial
examples/v1a/bridge_nautical/: bridgea.ial  land.ial  sea.ial
examples/v1a/dont_touch_it_you_idiot/: dtiyi.ial
examples/v1a/evil_empire/: evil_empire.ial
examples/v1a/forestry/: forestry.idc  not-enterwithtools.lp  work-new.ial  work-old.ial
examples/v1a/greeting/: fact-greeting.iaf  greeting.ial  weak-cons.lp
examples/v1a/libraries/: coord-trace-s0-s6.tex~  foo.aux  pubA.lp~  (+3 more)
examples/webforum/: alice-admin.iaf  forum.idc
instal/: __init__.py  __main__.py  defaults.py  errors.py  instalexceptions.py  instalinspect.py  instaljsonhelpers.py  instalquery.py  instalsolve.py  instaltrace.py  instalutility.py
instal-mode/: instal-mode.el  syntax-test.ial
instal/__data/: base_visitor.py  defaults.toml  header_pattern  standard_prelude.lp
instal/__tests/: TestEngine.py
instal/checkers/: bridge_checker.py  bridge_connections_check.py  bridge_deontics_check.py  bridge_event_gen_check.py  bridge_events_check.py  bridge_fluent_gen_check.py  bridge_structure_check.py  declaration_type_check.py  deontic_check.py  event_check.py  event_checker.py  fluent_check.py  institution_checker.py  institution_structure_check.py  name_duplication_check.py  notes  query_check.py  rule_check.py  term_declaration_check.py
instal/cli/: compiler.py  dsl_railroad.py  filter.py  generate_visitors.py  inspect.py  inspector.py  instalinspect.py  instalquery.py  instalremote.py  instalsolve.py  instaltrace.py  query.py  remote.py  reporter.py  solve.py  trace.py
instal/compiler/: InstalCompilerNew.py  bridge_compiler.py  domain_compiler.py  instaliabcompiler.py  instalialcompiler.py  institution_compiler.py  joint_compiler.py  query_compiler.py  situation_compiler.py  util.py
instal/domainparser/: DomainParser.py
instal/factparser/: FactParser.py
instal/interfaces/: ast.py  checker.py  clingo_wrapper.py  compiler.py  grounder.py  model.py  model_runner.py  parser.py  reporter.py  solver.py  solver_wrapper.py  state.py  trace.py  type_checker.py  util.py  validate.py
instal/model_runners/: multi_shot.py  multi_shot_runner.py
instal/models/: ClingoWrapper.py  InstalDummyModel.py  InstalModel.py  InstalMultiShotModel.py  Oracle.py  clingo_oracle.py  multi_shot_model.py
instal/parser/: DomainParser.py  FactParser.py  InstalParserNew.py  InstalParserWrapper.py  atom_parser.py  bridgetypechecker.py  debug_functions.py  fact_parser.py  installexer.py  instalparser.py  institution_parser.py  joint_parser.py  parse_funcs.py  parser.py  pyparse_institution.py  typechecker.py
instal/report/: dot.py  gantt.py  gantt_reporter.py  gantt_templates.py  pdf.py  pdf_templates.py  plantuml.py  svg.py  text_reporter.py
instal/reporters/: gantt_reporter.py  pdf_reporter.py  text_reporter.py
instal/solve/: clingo_solver.py
instal/solvers/: clingo_solver.py
instal/state/: InstalState.py  InstalStateTrace.py  clingo_symbol_state.py  instal_ast_state.py  instalatomparser.py  state.py  trace.py
instal/trace/: ast_state.py  clingo_symbol_state.py  trace.py
instal/tracers/: InstalGanttTracer.py  InstalPDFTracer.py  InstalTextTracer.py  InstalTracer.py  gantt_reporter.py  pdf_reporter.py  text_reporter.py
instal/type_checker/: bridge_checker.py  instaltypechecker.py  institution_checker.py
instal/util/: base_visitor.py  build_railroad.py  compiled_rep.py  domain_grounder.py  generate_visitors.py  generated_visitor.py  instalargparse.py  intermediate_rep.py  json_helpers.py  misc.py  rule_writer.py
instal/validate/: bridge_deontics_validator.py  bridge_event_gen_validator.py  bridge_fluent_gen_validator.py  bridge_structure_validator.py  declaration_type_validator.py  deontic_validator.py  event_validator.py  fluent_validator.py  institution_structure_validator.py  name_duplication_validator.py  query_validator.py  rule_validator.py  term_declaration_validator.py
src/docs/: conf.py
src/instal/: __init__.py  errors.py  index.rst
src/instal-mode/: instal-faces.el
(+478 files in other folders)
