[project]
name            = "instal"
version         = "0.0.1"
description     = "InstAL: Institutional Action Language Framework and Tools"
readme          = "README.md"
requires-python = ">=3.10"
license         = "GPLv3"
keywords        = []
authors         = [
({email = "jgrey4296@gmail.com"},
{name  = "J Grey"}),
({name = "InstAL team @ University of Bath"}
]
classifiers     = [
"Programming Language :: Python"
]

dependencies   = []

[project.optional-dependencies]
test = [
"pytest < 5.0.0",
]

[project.urls]
homepage      = "http://instsuite.github.io/'
documentation = "https://readthedocs.org/instal"
repository    = "https://github.com/jgrey4296/instal"
changelog     = "https://github.com/jgrey4296/instal/spam/blob/master/CHANGELOG.md"

[project.scripts]
# instal = instal.default:main

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

[tool.pytest.ini_options]
log_cli       = false
log_level     = "DEBUG"
log_cli_level = "DEBUG"


[build-system]
requires = [
"setuptools",
"wheel"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ['instal']
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
instal= []

[tool.setuptools.exclude-package-data]


[tool.pyright]
# strict = instal.*
verboseOutput               = true
typeCheckingMode            = "strict"
pythonVersion               = "3.10"

reportUnusedImport          = false
reportAssertAlwaysTrue      = "information"
reportMissingParameterType  = "warning"
reportMissingTypeArgument   = "warning"
reportMissingTypeStubs      = "warning"
reportUnknownMemberType     = "warning"
reportUnknownParameterType  = "information"
reportUnknownVariableType   = "warning"
reportUnnecessaryCast       = "information"
reportUnnecessaryIsInstance = "warning"
