[project]
name            = "instal"
version         = "0.1.1"
description     = "InstAL: Institutional Action Language Framework and Tools"
readme          = "README.md"
requires-python = ">=3.12"
license         = {text="GPLv3"}
keywords        = []
authors         = [
                {email = "jgrey4296@gmail.com", name  = "jgrey"},
                {name = "InstAL team @ University of Bath"}
                ]
classifiers     = [
"Programming Language :: Python"
]

dependencies   = [
    "clingo>=5.7.1",
    "jgdv>=1.0.1",
    "networkx>=3.4.2",
    "pyparsing>=3.2.3",
]

[project.optional-dependencies]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
homepage      = "http://instsuite.github.io/"
documentation = "https://instal.readthedocs.io/en/latest"
repository    = "https://github.com/jgrey4296/instal"
changelog     = "https://github.com/jgrey4296/instal/spam/blob/master/CHANGELOG.md"

##-- scripts
[project.scripts]
# keep these and __main__ synced
instal         = "instal.__main__:main"
instalc        = "instal.cli.compiler:main"
instalq        = "instal.cli.query:main"
instalf        = "instal.cli.filter:main"
instalr        = "instal.cli.reporter:main"
instalv        = "instal.cli.generate_visitors:main"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

##-- end scripts

##-- build-system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["instal"]

[tool.setuptools.package-data]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

##-- pytest
# https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts          = [
  # "--cov=",
  # "--ignore-glob=related_/*"
]
cache_dir       = ".temp/pytest_cache"
log_file        = ".temp/logs/pytest.log"

log_cli         = false
log_level       = "DEBUG"
log_cli_level   = "INFO"
log_format      = "%(levelname)s %(name)s : %(message)s"
log_file_level  = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s : %(message)s"

##-- end pytest

##-- bumpver
[tool.bumpver]
current_version    = "0.1.1"
version_pattern    = "MAJOR.MINOR.PATCH"
commit_message     = "[bump]: version {old_version} -> {new_version}"
tag_message        = "{new_version}"
tag_scope          = "default"
commit             = true
tag                = false
# pre_commit_hook  = ""
# post_commit_hook = ""
# push             = true

[tool.bumpver.file_patterns]
"pyproject.toml"   = [
                   '^version\s+=\s+"{version}"',
                   '^current_version\s+=\s+"{version}"'
]
"instal/__init__.py" = ['^__version__\s+=\s+"{version}"']

##-- end bumpver

##-- isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output           = false
py_version             = 311
# profile                = "hug"
comment_prefix         = "# "
sections               = [
"FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
default_section        = "THIRDPARTY"
lines_after_imports    = -1
lines_between_sections = 1
lines_between_types    = 0

import_heading_future      = "Imports:"
import_heading_stdlib      = "##-- stdlib imports"
import_heading_thirdparty  = "##-- 3rd party imports"
import_heading_firstparty  = "##-- 1st party imports"
import_heading_localfolder = ""

import_footer_future      = ""
import_footer_stdlib      = "##-- end stdlib imports"
import_footer_thirdparty  = "##-- end 3rd party imports"
import_footer_firstparty  = "##-- end 1st party imports"
import_footer_localfolder = ""

add_imports            = []

##-- end isort

##-- mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version      = "3.12"
warn_return_any     = true
warn_unused_configs = true
exclude             = [] # regexs to ignore
cache_dir           = ".temp/mypy_cache"
##-- end mypy

##-- uv
[tool.uv]

[tool.uv.sources]

##-- end uv
